# OCRPeeker

./: .gitignore  README.md  config.ini  main.py  pyproject.toml
ocrpeeker/: client.py  config.py  daemon.py  ocrpeeker_keybindings.conf
ocrpeeker/anki/: __init__.py
ocrpeeker/ocr/: __init__.py  base.py  manga_ocr.py
ocrpeeker/plugins/ocrpeeker_manga_ocr/: pyproject.toml
ocrpeeker/plugins/ocrpeeker_manga_ocr/ocrpeeker_manga_ocr/: __init__.py
ocrpeeker/plugins/ocrpeeker_opus_mt/: pyproject.toml
ocrpeeker/plugins/ocrpeeker_opus_mt/ocrpeeker_opus_mt/: __init__.py
ocrpeeker/plugins/ocrpeeker_opus_mt_jp/: pyproject.toml
ocrpeeker/plugins/ocrpeeker_opus_mt_jp/ocrpeeker_opus_mt_jp/: __init__.py
ocrpeeker/translation/: __init__.py  base.py  deepl.py  opus_mt.py  types.py
ocrpeeker/ui/: capture.py  popup.py
