[project]
name = "ocrpeeker"
version = "0.1.0"
description = "Screen overlay OCR and translation tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pillow>=10.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "pykakasi>=2.3.0",
]

[project.scripts]
ocrpeeker = "ocrpeeker.daemon:main"
ocrpeeker-client = "ocrpeeker.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "ocrpeeker/plugins/ocrpeeker_manga_ocr",
    "ocrpeeker/plugins/ocrpeeker_opus_mt",
]

[tool.uv.sources]
ocrpeeker-manga-ocr = { workspace = true, editable = true }
ocrpeeker-opus-mt = { workspace = true, editable = true }
