[project]
name = "ocrpeeker-opus-mt-jp"
version = "0.1.0"

dependencies = [
    "ocrpeeker",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "pykakasi>=2.3.0",
]

[project.entry-points."ocrpeeker.translation"]
opus-mt-jp = "ocrpeeker_opus_mt_jp:OpusMTTranslatorJP"

[tool.uv.sources]
ocrpeeker = { workspace = true }
